# rewire-fastapi

./: README.md  pyproject.toml  requirements.txt
rewire_fastapi/: __init__.py  dependable.py  patch.py
